--- a/src/watchdog.conf
+++ b/src/watchdog.conf
@@ -34,29 +34,28 @@ Enable_Stdout_Capture=false
 [States]
 # Format: RuleName={StartNode, TimeoutMS_1, EndNode_1, TimeoutMS_2, EndNode_2, ..., Description}
 
-# 1. 灰域
+# 1. 灰域, 一般示范用例
 Gray_Zone_Start={开始打灰, 300000, 灰域_确认切换, 开始打灰}
 Gray_Zone_Loop={灰域_确认切换, 300000, 灰域_确认切换, 打灰循环}
 
-# 2. 裂变连接捡垃圾
-Shattered_Connexion_Logistic_Start={裂变链接捡垃圾, 180000, 裂变链接捡垃圾_执行计划, 开始捡垃圾}
+# 2. 裂变连接捡垃圾, 单循环示范用例
 Shattered_Connexion_Logistic_Loop={裂变链接捡垃圾_执行计划, 60000, 裂变链接捡垃圾_执行计划, 捡垃圾循环}
 
-# 3. 零电荷(卷积核)后勤, 这里编写一个 MultiNodes用作示范
+# 3. 零电荷(卷积核)后勤, MultiNodes 示范用例
 Convolutional_Kernel_Logistic_Start={指挥官后勤, 180000, 零电荷_再次作战, 180000, 零电荷_开始作战, 开始指挥官后勤}
 Convolutional_Kernel_Logistic_Loop_1={零电荷_开始作战, 60000, 零电荷_再次作战, 指挥官后勤状态机1}
-Convolutional_Kernel_Logistic_Loop_2={零电荷_再次作战, 60000, 零电荷_再次作战, 指挥官后勤状态机2}
+Convolutional_Kernel_Logistic_Loop_2={零电荷_再次作战, 180000, 零电荷_再次作战, 指挥官后勤状态机2}
 
 [Entries]
 # Format: EntryName={NodeName, Description}
 
 Gray_Zone_Entry={开始打灰, 灰域任务入口}
-Shattered_Connexion_Logistic_Entry={裂变链接捡垃圾, 捡垃圾入口}
+Shattered_Connexion_Logistic_Entry={裂变链接捡垃圾_执行计划, 捡垃圾入口}
 Convolutional_Kernel_Logistic_Entry={指挥官后勤, 指挥官后勤入口}
 
 [Completed]
 # Format: CompleteName={NodeName, Description}
 
-Gray_Zone_Complete={打灰永不结束, 灰域任务完成}
-Shattered_Connexion_Logistic_Complete={捡垃圾不结束, 捡垃圾任务完成}
-Convolutional_Kernel_Logistic_COmplete={后勤也不会结束吧, 指挥官后勤任务完成}
+Gray_Zone_Complete={_打灰永不结束, 灰域任务完成}
+Shattered_Connexion_Logistic_Complete={_捡垃圾不结束, 捡垃圾任务完成}
+Convolutional_Kernel_Logistic_COmplete={_后勤也不会结束吧, 指挥官后勤任务完成}
